fixed styling of landing page on mobile

--- a/src/SCSS/_landing.scss
+++ b/src/SCSS/_landing.scss
@@ -17,10 +17,7 @@
   }
 }
 .landing-page {
-  height: 100%;
-}
-.landing-page main {
-  height: 70%;
+  min-height: 100vh;
 }
 
 .main-landing {
